handling resize for selection

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -6,6 +6,11 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
+img,
+button {
+  user-select: none;
+}
+
 .svg-parent-div {
   display: flex;
   justify-content: center;
@@ -20,10 +25,11 @@
 }
 
 .load-button {
+  margin-top: 10px;
   padding: 15px 25px;
   font-size: 18px;
   color: #f0f0f0;
-  background-color: #944038;
+  background-color: var(--button-color, #944038);
   border: none;
   cursor: pointer;
   transition: background-color 0.3s, transform 1.1s ease,
@@ -98,25 +104,15 @@ button:hover {
   top: 0;
   width: 0;
   height: 0;
-  left: var(--close-selection-position, 0);
+  left: var(--position, 0);
 }
 
-.start-coord {
-  left: var(--start-coord-position, 0);
-  top: 100%;
-  transform: translateY(-50%);
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: #154151;
-}
-
+.start-coord,
 .end-coord {
-  left: var(--end-coord-position, 0);
-  top: 100%;
+  left: var(--position, 0);
+  top: 50%;
   transform: translateY(-50%);
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: #14a6c4;
+  width: 5px;
+  height: 50px;
+  background-color: #944038;
 }
