--- a/src/styles/mainstyle.less
+++ b/src/styles/mainstyle.less
@@ -27,7 +27,9 @@ h1,
 img {
     margin: 20px;
     font-size: 42px;
+    cursor: pointer;
 }
+
 
 .top-bar {
     display: flex;
@@ -36,6 +38,20 @@ img {
     background-color: @dark-seagreen;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
+
+#manual {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 0 25% 0 25%;
+
+    p {
+        margin: 5px;
+    }
+}
+
+
 
 .logo-container img {
     height: 40px;
