selection dragging added

--- a/src/styles/mainstyle.less
+++ b/src/styles/mainstyle.less
@@ -126,6 +126,7 @@ img {
         flex: 1;
         width: 60%;
         margin: 30px;
+        cursor: pointer;
 
         .svg-card {
             border: 2px solid @sea-black;
