--- a/src/styles/mainstyle.css
+++ b/src/styles/mainstyle.css
@@ -100,6 +100,7 @@ img {
   flex: 1;
   width: 60%;
   margin: 30px;
+  cursor: pointer;
 }
 .two-columns-container .main-roll .svg-card {
   border: 2px solid #052228;
