--- a/src/styles/mainstyle.less
+++ b/src/styles/mainstyle.less
@@ -82,7 +82,7 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid;
+    border: 1px solid black;
 }
 
 // styles for AllRolls view
@@ -201,8 +201,9 @@ img {
     .end-coord {
         left: var(--position, 0);
         top: 50%;
+        border-radius: 30%;
         transform: translateY(-50%);
-        width: 5px;
+        width: 7px;
         height: 50px;
         background-color: @rusty-red;
     }
